# Copyright 2019 The Triple Banana Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/rules.gni")
import("//chrome/android/chrome_public_apk_tmpl.gni")
import("//triple_banana/VERSION")

manifest_package = "org.triple.banana"
triple_banana_manifest = "$target_gen_dir/AndroidManifest.xml"

jinja_template("triple_banana_manifest") {
  # TripleBanana's manifest is based on chrome_public_apk's manifest.
  includes = [ "//chrome/android/java/AndroidManifest.xml" ]
  input = "//triple_banana/src/AndroidManifest.xml"
  output = triple_banana_manifest
  variables = default_chrome_public_jinja_variables + [
                "manifest_package=$manifest_package",
                "min_sdk_version=21",
                "target_sdk_version=$android_sdk_version",
                "use_32bit_abi=$android_64bit_target_cpu",
              ]
}

if (android_64bit_target_cpu) {
  monochrome_public_common_apk_or_module_tmpl("triple_banana") {
    target_type = "android_apk"
    apk_name = "TripleBanana64"

    android_manifest = triple_banana_manifest
    android_manifest_dep = ":triple_banana_manifest"

    enable_lint = is_debug

    is_64_bit_browser = false
    include_64_bit_webview = true

    shared_resources_allowlist_target =
        "//android_webview:system_webview_no_weblayer_apk"
    shared_resources_allowlist_locales = locales

    # The following write/read operations are required to convert number string to
    # integer because there is no conversion utility in GN side.
    _ = "$root_out_dir/conversion.tmp"
    write_file(_, chrome_version_code)
    _chrome_version_code_as_number = read_file(_, "value")
    write_file(_, string_replace(BANANA_VERSION, ".", ""))
    _banana_version_as_number = read_file(_, "value")

    version_code =
        "" + (_banana_version_as_number + _chrome_version_code_as_number)
    version_name = BANANA_VERSION + " @ " + CHROMIUM_VERSION

    deps = [
      ":triple_banana_assets",
      ":triple_banana_java",
      "//chrome/android:app_hooks_java",
      "//chrome/android:chrome_apk_pak_assets",
      "//chrome/android:chrome_public_base_module_java",
      "//chrome/android:chrome_public_non_pak_assets",
      "//chrome/android:chrome_public_v8_assets",
      "//third_party/icu:icu_assets",
    ]
  }
} else {
  chrome_public_common_apk_or_module_tmpl("triple_banana") {
    target_type = "android_apk"
    apk_name = "TripleBanana32"

    android_manifest = triple_banana_manifest
    android_manifest_dep = ":triple_banana_manifest"

    enable_lint = is_debug

    shared_libraries = [ "//chrome/android:libchrome" ]

    load_library_from_apk = false
    disable_library_rename = true

    # The following write/read operations are required to convert number string to
    # integer because there is no conversion utility in GN side.
    _ = "$root_out_dir/conversion.tmp"
    write_file(_, chrome_version_code)
    _chrome_version_code_as_number = read_file(_, "value")
    write_file(_, string_replace(BANANA_VERSION, ".", ""))
    _banana_version_as_number = read_file(_, "value")

    version_code =
        "" + (_banana_version_as_number + _chrome_version_code_as_number)
    version_name = BANANA_VERSION + " @ " + CHROMIUM_VERSION

    deps = [
      ":triple_banana_assets",
      ":triple_banana_java",
      "//chrome/android:chrome_apk_pak_assets",
      "//chrome/android:chrome_public_base_module_java",
      "//chrome/android:chrome_public_non_pak_assets",
      "//chrome/android:chrome_public_v8_assets",
      "//third_party/icu:icu_assets",
    ]
  }
}

android_library("triple_banana_java") {
  proguard_configs = [ "//triple_banana/proguard.flags" ]

  sources = [
    # banana_cake layer
    "//triple_banana/banana_cake/bootstrap/java/org/banana/cake/bootstrap/BananaApplication.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeApplicationUtils.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeButtonStateProvider.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeClearBrowsingData.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeCommandLine.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeDarkModeUtils.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeFeatureFlags.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeInterfaceProvider.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakePipController.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeSecureDnsBridge.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeTab.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeTabManager.java",
    "//triple_banana/banana_cake/java/org/banana/cake/CakeToolbarManager.java",

    # src
    "//triple_banana/src/org/triple/banana/CommandLineInitializer.java",
    "//triple_banana/src/org/triple/banana/InterfaceProvider.java",
    "//triple_banana/src/org/triple/banana/TripleBananaApplication.java",

    # appmenu
    "//triple_banana/src/org/triple/banana/appmenu/AppMenuDelegate.java",

    # authentication
    "//triple_banana/src/org/triple/banana/authentication/AuthenticationManagerImpl.java",
    "//triple_banana/src/org/triple/banana/authentication/Authenticator.java",
    "//triple_banana/src/org/triple/banana/authentication/Backend.java",
    "//triple_banana/src/org/triple/banana/authentication/BiometricPromptBackend.java",
    "//triple_banana/src/org/triple/banana/authentication/FallbackBackend.java",
    "//triple_banana/src/org/triple/banana/authentication/KeyguardBackend.java",
    "//triple_banana/src/org/triple/banana/authentication/KeyguardFragment.java",
    "//triple_banana/src/org/triple/banana/authentication/SecurityLevelChecker.java",

    # browser lock
    "//triple_banana/src/org/triple/banana/lock/BrowserLock.java",

    # base
    "//triple_banana/src/org/triple/banana/base/ApplicationStatusTracker.java",
    "//triple_banana/src/org/triple/banana/base/InterActivity.java",
    "//triple_banana/src/org/triple/banana/base/function/Supplier.java",
    "//triple_banana/src/org/triple/banana/base/model/Model.java",
    "//triple_banana/src/org/triple/banana/base/widget/VerticalSeekBar.java",

    # browsing_data
    "//triple_banana/src/org/triple/banana/browsing_data/AutoClearBrowsingData.java",

    # button_state
    "//triple_banana/src/org/triple/banana/button_state/ButtonStateManager.java",

    # download
    "//triple_banana/src/org/triple/banana/download/DownloadInterceptorImpl.java",
    "//triple_banana/src/org/triple/banana/download/SimpleDownloader.java",

    # encrypter
    "//triple_banana/src/org/triple/banana/encrypter/Encrypter.java",
    "//triple_banana/src/org/triple/banana/encrypter/EncrypterFactory.java",
    "//triple_banana/src/org/triple/banana/encrypter/EncrypterManagerImpl.java",
    "//triple_banana/src/org/triple/banana/encrypter/FakeEncrypter.java",
    "//triple_banana/src/org/triple/banana/encrypter/KeyStoreEncrypter.java",

    # hello
    "//triple_banana/src/org/triple/banana/hello/HelloImpl.java",

    # media
    "//triple_banana/src/org/triple/banana/media/MediaCommandProcessor.java",
    "//triple_banana/src/org/triple/banana/media/MediaController.java",
    "//triple_banana/src/org/triple/banana/media/MediaEventDispatcher.java",
    "//triple_banana/src/org/triple/banana/media/MediaEventListener.java",
    "//triple_banana/src/org/triple/banana/media/MediaPlayState.java",
    "//triple_banana/src/org/triple/banana/media/MediaSuspendController.java",

    # media_remote
    "//triple_banana/src/org/triple/banana/media_remote/CaptionDataModel.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteGestureDetector.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteLayout.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteOptionDialog.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteService.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteView.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteViewImpl.java",
    "//triple_banana/src/org/triple/banana/media_remote/MediaRemoteViewModel.java",
    "//triple_banana/src/org/triple/banana/media_remote/OptionDialogManager.java",
    "//triple_banana/src/org/triple/banana/media_remote/PlaybackRateDataModel.java",
    "//triple_banana/src/org/triple/banana/media_remote/QualityDataModel.java",

    # password
    "//triple_banana/src/org/triple/banana/password/PasswordExtension.java",

    # quick_menu
    "//triple_banana/src/org/triple/banana/quick_menu/ButtonActionProvider.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ButtonActionProviderImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ButtonInfo.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ButtonInfoStorage.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ButtonInfoStorageImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/DialogBasedViewImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/QuickMenuBottomButton.java",
    "//triple_banana/src/org/triple/banana/quick_menu/QuickMenuMiddleButton.java",
    "//triple_banana/src/org/triple/banana/quick_menu/QuickMenuService.java",
    "//triple_banana/src/org/triple/banana/quick_menu/QuickMenuServiceImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/QuickMenuTopButton.java",
    "//triple_banana/src/org/triple/banana/quick_menu/View.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ViewController.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ViewControllerImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ViewModelBase.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ViewModelImpl.java",
    "//triple_banana/src/org/triple/banana/quick_menu/ViewModelReadOnly.java",

    # remote_config
    "//triple_banana/src/org/triple/banana/remote_config/RemoteConfig.java",

    # secure_dns
    "//triple_banana/src/org/triple/banana/secure_dns/SecureDnsNotificationManager.java",

    # settings
    "//triple_banana/src/org/triple/banana/settings/AdblockFeatureSettings.java",
    "//triple_banana/src/org/triple/banana/settings/AdvancedFeatureSettings.java",
    "//triple_banana/src/org/triple/banana/settings/ExtensionFeatures.java",
    "//triple_banana/src/org/triple/banana/settings/MediaFeatureSettings.java",
    "//triple_banana/src/org/triple/banana/settings/PrivacyAndSecuritySettings.java",
    "//triple_banana/src/org/triple/banana/settings/SettingsOpener.java",
    "//triple_banana/src/org/triple/banana/settings/UserInterfaceSettings.java",
    "//triple_banana/src/org/triple/banana/settings/preference/AdblockPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/AutoPlayPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/BackgroundPlayPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/BottomToolbarPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/BrowserLockPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/DarkModePreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/LongClickablePreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/MediaRemotePreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/RestartSwitchPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/SecureLoginPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/ToolbarEditorPreference.java",
    "//triple_banana/src/org/triple/banana/settings/preference/TranslatePreference.java",

    # subresource_filter
    "//triple_banana/src/org/triple/banana/subresource_filter/RulesetLoader.java",

    # theme
    "//triple_banana/src/org/triple/banana/theme/DarkModeController.java",

    # toolbar
    "//triple_banana/src/org/triple/banana/toolbar/BottomToolbarButtonDecoration.java",
    "//triple_banana/src/org/triple/banana/toolbar/BottomToolbarController.java",
    "//triple_banana/src/org/triple/banana/toolbar/ButtonId.java",
    "//triple_banana/src/org/triple/banana/toolbar/ButtonTouchHelperCallback.java",
    "//triple_banana/src/org/triple/banana/toolbar/CandidateToolbarButtonAdapter.java",
    "//triple_banana/src/org/triple/banana/toolbar/IToolbarStateChangedObserver.java",
    "//triple_banana/src/org/triple/banana/toolbar/IToolbarStatePersistentStore.java",
    "//triple_banana/src/org/triple/banana/toolbar/OnItemMoveListener.java",
    "//triple_banana/src/org/triple/banana/toolbar/SelectedToolbarButtonAdapter.java",
    "//triple_banana/src/org/triple/banana/toolbar/TabSwitcherToolbarButton.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarButton.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarButtonItem.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarEditActivity.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarEditController.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarEditor.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarStateModel.java",
    "//triple_banana/src/org/triple/banana/toolbar/ToolbarStatePreferenceStoreImpl.java",
    "//triple_banana/src/org/triple/banana/toolbar/ViewHolderDragListener.java",

    # util
    "//triple_banana/src/org/triple/banana/util/AudioUtil.java",
    "//triple_banana/src/org/triple/banana/util/BrightnessUtil.java",
    "//triple_banana/src/org/triple/banana/util/CountryCodeUtil.java",
    "//triple_banana/src/org/triple/banana/util/RotationManager.java",
    "//triple_banana/src/org/triple/banana/util/Unzip.java",
    "//triple_banana/src/org/triple/banana/util/YouTubeUtil.java",

    # util
    "//triple_banana/src/org/triple/banana/version/VersionInfo.java",

    # youtube
    "//triple_banana/src/org/triple/banana/youtube/YouTubeCommandBuilder.java",
    "//triple_banana/src/org/triple/banana/youtube/YouTubePlayerController.java",

    # legacy modules
    "//triple_banana/modules/public/java/org/triple/banana/modules/InterfaceRegistrar.java",
  ]
  deps = [
    ":androidx_biometric_java",
    ":triple_banana_resources",
    "//base:base_java",
    "//base:jni_java",
    "//chrome/android:chrome_java",
    "//chrome/browser/banners/android:java",
    "//chrome/browser/preferences:java",
    "//chrome/browser/privacy:java",
    "//chrome/browser/profiles/android:java",
    "//chrome/browser/settings:java",
    "//chrome/browser/tab:java",
    "//chrome/browser/tabmodel:java",
    "//chrome/browser/ui/android/appmenu:java",
    "//components/browser_ui/site_settings/android:java",
    "//components/content_settings/android:content_settings_enums_java",
    "//components/embedder_support/android:util_java",
    "//components/permissions/android:java",
    "//components/prefs/android:java",
    "//components/user_prefs/android:java",
    "//content/public/android:content_java",
    "//mojo/public/java:base_java",
    "//mojo/public/java:bindings_java",
    "//mojo/public/java:system_java",
    "//mojo/public/java/system:system_impl_java",
    "//services/service_manager/public/java:service_manager_java",
    "//services/service_manager/public/mojom:mojom_java",
    "//third_party/android_deps:android_support_v7_appcompat_java",
    "//third_party/android_deps:androidx_annotation_annotation_java",
    "//third_party/android_deps:androidx_appcompat_appcompat_java",
    "//third_party/android_deps:androidx_appcompat_appcompat_resources_java",
    "//third_party/android_deps:androidx_core_core_java",
    "//third_party/android_deps:androidx_preference_preference_java",
    "//third_party/android_deps:androidx_recyclerview_recyclerview_java",
    "//triple_banana/modules:mojom_java",
    "//ui/android:ui_java",
    "//url:gurl_java",
  ]
  srcjar_deps = [ ":builtin_ruleset_version" ]

  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]

  resources_package = "org.triple.banana"
}

android_resources("triple_banana_resources") {
  resource_overlay = true
  sources = [
    "//triple_banana/res/anim/close_to_bottom.xml",
    "//triple_banana/res/anim/open_from_bottom.xml",
    "//triple_banana/res/drawable-v21/ic_fingerprint_black_36dp.xml",
    "//triple_banana/res/drawable/adblock.xml",
    "//triple_banana/res/drawable/atmegame_logo.xml",
    "//triple_banana/res/drawable/ic_add_black_24dp.xml",
    "//triple_banana/res/drawable/ic_add_secret_tab_black_24dp.xml",
    "//triple_banana/res/drawable/ic_add_to_home_black_24dp.xml",
    "//triple_banana/res/drawable/ic_archive_black_24dp.xml",
    "//triple_banana/res/drawable/ic_arrow_backward.xml",
    "//triple_banana/res/drawable/ic_arrow_backward_white.xml",
    "//triple_banana/res/drawable/ic_arrow_forward.xml",
    "//triple_banana/res/drawable/ic_backward.xml",
    "//triple_banana/res/drawable/ic_brightness_up.xml",
    "//triple_banana/res/drawable/ic_clear_browsing_data.xml",
    "//triple_banana/res/drawable/ic_close_current_tab.xml",
    "//triple_banana/res/drawable/ic_closed_caption.xml",
    "//triple_banana/res/drawable/ic_dark_black_24dp.xml",
    "//triple_banana/res/drawable/ic_desktop_black_24dp.xml",
    "//triple_banana/res/drawable/ic_done.xml",
    "//triple_banana/res/drawable/ic_download.xml",
    "//triple_banana/res/drawable/ic_find_in_page_black_24dp.xml",
    "//triple_banana/res/drawable/ic_forward.xml",
    "//triple_banana/res/drawable/ic_local_printshop_black_24dp.xml",
    "//triple_banana/res/drawable/ic_lock.xml",
    "//triple_banana/res/drawable/ic_lock_opened.xml",
    "//triple_banana/res/drawable/ic_mute.xml",
    "//triple_banana/res/drawable/ic_new.xml",
    "//triple_banana/res/drawable/ic_pause.xml",
    "//triple_banana/res/drawable/ic_phone_black_24dp.xml",
    "//triple_banana/res/drawable/ic_pip.xml",
    "//triple_banana/res/drawable/ic_play.xml",
    "//triple_banana/res/drawable/ic_playback_rate.xml",
    "//triple_banana/res/drawable/ic_power_off_black.xml",
    "//triple_banana/res/drawable/ic_quality.xml",
    "//triple_banana/res/drawable/ic_refresh_black_24dp.xml",
    "//triple_banana/res/drawable/ic_rotate.xml",
    "//triple_banana/res/drawable/ic_search_black_24dp.xml",
    "//triple_banana/res/drawable/ic_settings.xml",
    "//triple_banana/res/drawable/ic_share_black_24dp.xml",
    "//triple_banana/res/drawable/ic_star_border_black_24dp.xml",
    "//triple_banana/res/drawable/ic_visit_history_black_24dp.xml",
    "//triple_banana/res/drawable/ic_volume_up.xml",
    "//triple_banana/res/drawable/media_feature.xml",
    "//triple_banana/res/drawable/media_feature_circle.xml",
    "//triple_banana/res/drawable/quick_menu_background.xml",
    "//triple_banana/res/drawable/quick_menu_bottom_button_ripple.xml",
    "//triple_banana/res/drawable/quick_menu_button_image_background.xml",
    "//triple_banana/res/drawable/quick_menu_icon_outline.xml",
    "//triple_banana/res/drawable/quick_menu_middle_button_ripple.xml",
    "//triple_banana/res/drawable/round_rect.xml",
    "//triple_banana/res/drawable/round_rect_dark.xml",
    "//triple_banana/res/drawable/secure_dns.xml",
    "//triple_banana/res/drawable/toolbar_button_banana.xml",
    "//triple_banana/res/layout/browser_lock_background.xml",
    "//triple_banana/res/layout/media_remote_view.xml",
    "//triple_banana/res/layout/quick_menu_layout.xml",
    "//triple_banana/res/layout/toolbar_button.xml",
    "//triple_banana/res/layout/toolbar_edit_main.xml",
    "//triple_banana/res/layout/toolbar_space.xml",
    "//triple_banana/res/menu/toolbar_action_bar_menu.xml",
    "//triple_banana/res/values-ko/strings.xml",
    "//triple_banana/res/values-land/dimens.xml",
    "//triple_banana/res/values-night/colors.xml",
    "//triple_banana/res/values-port/dimens.xml",
    "//triple_banana/res/values/colors.xml",
    "//triple_banana/res/values/dimens.xml",
    "//triple_banana/res/values/ids.xml",
    "//triple_banana/res/values/strings.xml",
    "//triple_banana/res/values/styles.xml",
    "//triple_banana/res/xml/adblock_feature_preferences.xml",
    "//triple_banana/res/xml/advanced_features_preferences.xml",
    "//triple_banana/res/xml/banana_extension_preferences.xml",
    "//triple_banana/res/xml/media_features_preferences.xml",
    "//triple_banana/res/xml/privacy_and_security_preferences.xml",
    "//triple_banana/res/xml/user_interface_preferences.xml",
    "//triple_banana/res_override/drawable-hdpi/fre_product_logo.png",
    "//triple_banana/res_override/drawable-hdpi/product_logo_name.png",
    "//triple_banana/res_override/drawable-mdpi/fre_product_logo.png",
    "//triple_banana/res_override/drawable-mdpi/product_logo_name.png",
    "//triple_banana/res_override/drawable-xhdpi/fre_product_logo.png",
    "//triple_banana/res_override/drawable-xhdpi/product_logo_name.png",
    "//triple_banana/res_override/drawable-xxhdpi/fre_product_logo.png",
    "//triple_banana/res_override/drawable-xxhdpi/product_logo_name.png",
    "//triple_banana/res_override/drawable-xxxhdpi/fre_product_logo.png",
    "//triple_banana/res_override/drawable-xxxhdpi/product_logo_name.png",
    "//triple_banana/res_override/mipmap-hdpi/app_icon.png",
    "//triple_banana/res_override/mipmap-hdpi/app_shortcut_icon.png",
    "//triple_banana/res_override/mipmap-hdpi/app_single_page_icon.png",
    "//triple_banana/res_override/mipmap-mdpi/app_icon.png",
    "//triple_banana/res_override/mipmap-mdpi/app_shortcut_icon.png",
    "//triple_banana/res_override/mipmap-mdpi/app_single_page_icon.png",
    "//triple_banana/res_override/mipmap-xhdpi/app_icon.png",
    "//triple_banana/res_override/mipmap-xhdpi/app_shortcut_icon.png",
    "//triple_banana/res_override/mipmap-xhdpi/app_single_page_icon.png",
    "//triple_banana/res_override/mipmap-xxhdpi/app_icon.png",
    "//triple_banana/res_override/mipmap-xxhdpi/app_shortcut_icon.png",
    "//triple_banana/res_override/mipmap-xxhdpi/app_single_page_icon.png",
    "//triple_banana/res_override/mipmap-xxxhdpi/app_icon.png",
    "//triple_banana/res_override/mipmap-xxxhdpi/app_shortcut_icon.png",
    "//triple_banana/res_override/mipmap-xxxhdpi/app_single_page_icon.png",
    "//triple_banana/res_override/values-af/override_strings.xml",
    "//triple_banana/res_override/values-am/override_strings.xml",
    "//triple_banana/res_override/values-ar/override_strings.xml",
    "//triple_banana/res_override/values-as/override_strings.xml",
    "//triple_banana/res_override/values-az/override_strings.xml",
    "//triple_banana/res_override/values-b+sr+Latn/override_strings.xml",
    "//triple_banana/res_override/values-be/override_strings.xml",
    "//triple_banana/res_override/values-bg/override_strings.xml",
    "//triple_banana/res_override/values-bn/override_strings.xml",
    "//triple_banana/res_override/values-bs/override_strings.xml",
    "//triple_banana/res_override/values-ca/override_strings.xml",
    "//triple_banana/res_override/values-cs/override_strings.xml",
    "//triple_banana/res_override/values-da/override_strings.xml",
    "//triple_banana/res_override/values-de/override_strings.xml",
    "//triple_banana/res_override/values-el/override_strings.xml",
    "//triple_banana/res_override/values-en-rGB/override_strings.xml",
    "//triple_banana/res_override/values-es-rUS/override_strings.xml",
    "//triple_banana/res_override/values-es/override_strings.xml",
    "//triple_banana/res_override/values-et/override_strings.xml",
    "//triple_banana/res_override/values-eu/override_strings.xml",
    "//triple_banana/res_override/values-fa/override_strings.xml",
    "//triple_banana/res_override/values-fi/override_strings.xml",
    "//triple_banana/res_override/values-fr-rCA/override_strings.xml",
    "//triple_banana/res_override/values-fr/override_strings.xml",
    "//triple_banana/res_override/values-gl/override_strings.xml",
    "//triple_banana/res_override/values-gu/override_strings.xml",
    "//triple_banana/res_override/values-hi/override_strings.xml",
    "//triple_banana/res_override/values-hr/override_strings.xml",
    "//triple_banana/res_override/values-hu/override_strings.xml",
    "//triple_banana/res_override/values-hy/override_strings.xml",
    "//triple_banana/res_override/values-in/override_strings.xml",
    "//triple_banana/res_override/values-is/override_strings.xml",
    "//triple_banana/res_override/values-it/override_strings.xml",
    "//triple_banana/res_override/values-iw/override_strings.xml",
    "//triple_banana/res_override/values-ja/override_strings.xml",
    "//triple_banana/res_override/values-ka/override_strings.xml",
    "//triple_banana/res_override/values-kk/override_strings.xml",
    "//triple_banana/res_override/values-km/override_strings.xml",
    "//triple_banana/res_override/values-kn/override_strings.xml",
    "//triple_banana/res_override/values-ko/override_strings.xml",
    "//triple_banana/res_override/values-ky/override_strings.xml",
    "//triple_banana/res_override/values-lo/override_strings.xml",
    "//triple_banana/res_override/values-lt/override_strings.xml",
    "//triple_banana/res_override/values-lv/override_strings.xml",
    "//triple_banana/res_override/values-mk/override_strings.xml",
    "//triple_banana/res_override/values-ml/override_strings.xml",
    "//triple_banana/res_override/values-mn/override_strings.xml",
    "//triple_banana/res_override/values-mr/override_strings.xml",
    "//triple_banana/res_override/values-ms/override_strings.xml",
    "//triple_banana/res_override/values-my/override_strings.xml",
    "//triple_banana/res_override/values-nb/override_strings.xml",
    "//triple_banana/res_override/values-ne/override_strings.xml",
    "//triple_banana/res_override/values-nl/override_strings.xml",
    "//triple_banana/res_override/values-or/override_strings.xml",
    "//triple_banana/res_override/values-pa/override_strings.xml",
    "//triple_banana/res_override/values-pl/override_strings.xml",
    "//triple_banana/res_override/values-pt-rBR/override_strings.xml",
    "//triple_banana/res_override/values-pt-rPT/override_strings.xml",
    "//triple_banana/res_override/values-ro/override_strings.xml",
    "//triple_banana/res_override/values-ru/override_strings.xml",
    "//triple_banana/res_override/values-si/override_strings.xml",
    "//triple_banana/res_override/values-sk/override_strings.xml",
    "//triple_banana/res_override/values-sl/override_strings.xml",
    "//triple_banana/res_override/values-sq/override_strings.xml",
    "//triple_banana/res_override/values-sr/override_strings.xml",
    "//triple_banana/res_override/values-sv/override_strings.xml",
    "//triple_banana/res_override/values-sw/override_strings.xml",
    "//triple_banana/res_override/values-ta/override_strings.xml",
    "//triple_banana/res_override/values-te/override_strings.xml",
    "//triple_banana/res_override/values-th/override_strings.xml",
    "//triple_banana/res_override/values-tl/override_strings.xml",
    "//triple_banana/res_override/values-tr/override_strings.xml",
    "//triple_banana/res_override/values-uk/override_strings.xml",
    "//triple_banana/res_override/values-ur/override_strings.xml",
    "//triple_banana/res_override/values-uz/override_strings.xml",
    "//triple_banana/res_override/values-vi/override_strings.xml",
    "//triple_banana/res_override/values-zh-rCN/override_strings.xml",
    "//triple_banana/res_override/values-zh-rHK/override_strings.xml",
    "//triple_banana/res_override/values-zh-rTW/override_strings.xml",
    "//triple_banana/res_override/values-zu/override_strings.xml",
    "//triple_banana/res_override/values/channel_constants.xml",
    "//triple_banana/res_override/values/override_strings.xml",
  ]

  deps = [ "//chrome/android:chrome_app_java_resources" ]

  create_srcjar = false
}

java_cpp_template("builtin_ruleset_version") {
  builtin_ruleset_version = "0"
  builtin_ruleset_size = "0"

  sources = [ "//triple_banana/src/org/triple/banana/subresource_filter/ruleset/RulesetVersion.template" ]
  defines = [
    "BUILTIN_RULESET_VERSION_VALUE=\"$builtin_ruleset_version\"",
    "BUILTIN_RULESET_SIZE_VALUE=$builtin_ruleset_size",
  ]
}

android_assets("triple_banana_assets") {
  sources = []
}

android_aar_prebuilt("androidx_biometric_java") {
  aar_path = "android_deps/libs/androidx_biometric/androidx_biometric-1.0.1.aar"
  info_path =
      "android_deps/libs/androidx_biometric/androidx_biometric-1.0.1.info"
  deps = [ "//third_party/android_deps:android_support_v7_appcompat_java" ]
}
