# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

triple_banana_hooks_sources = [
  "//triple_banana/modules/public/java/org/triple/banana/modules/Connector.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaApplicationUtils.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaBottomToolbarController.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaCommandLine.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaCommandLineInitializer.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaExtensionSettings.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaFeatureFlags.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaInterfaceProvider.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaPasswordExtension.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTab.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTabManager.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTabObserver.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaToolbarManager.java",
]

triple_banana_resource = [ "//triple_banana/res_override" ]
