# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

triple_banana_hooks_sources = [
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaAppMenu.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaApplicationEvent.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaApplicationUtils.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaBottomToolbarController.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaClearBrowsingData.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaCommandLine.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaCommandLineInitializer.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaDarkModeUtils.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaExtensionSettings.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaFeatureFlags.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaInterfaceProvider.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaJavaScriptCallback.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaLocalState.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaPasswordExtension.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaPipController.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaSubresourceFilter.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaSwitchPreference.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTab.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTabManager.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaTabObserver.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaToolbarManager.java",
  "//triple_banana/banana_cake/interfaces/java/org/banana/cake/interfaces/BananaVersionInfo.java",
  "//triple_banana/modules/public/java/org/triple/banana/modules/Connector.java",
]

triple_banana_jni_sources = [
  "//triple_banana/banana_cake/java/org/banana/cake/CakeLocalState.java",
  "//triple_banana/banana_cake/java/org/banana/cake/CakeSubresourceFilter.java",
]

triple_banana_native_sources = [
  "//triple_banana/banana_cake/cpp/cake_local_state.cc",
  "//triple_banana/banana_cake/cpp/cake_subresource_filter.cc",
]
