# Copyright 2019 The Triple Banana Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "public/mojom/adblock.mojom",
    "public/mojom/authentication.mojom",
    "public/mojom/encrypter.mojom",
    "public/mojom/hello.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
  ]

  export_class_attribute_blink = "BLINK_PLATFORM_EXPORT"
  export_define_blink = "BLINK_PLATFORM_IMPLEMENTATION=1"
  export_header_blink = "third_party/blink/public/platform/web_common.h"
}

source_set("native") {
  sources = [
    "hello/hello.cc",
    "hello/hello.h",
    "public/module_service.cc",
    "public/module_service.h",
  ]

  deps = [
    ":mojom",
    "//services/service_manager/public/cpp",
  ]

  if (is_android) {
    deps += [ ":jni_headers" ]
  }
}

if (is_android) {
  generate_jni("jni_headers") {
    sources = [
      "public/java/org/triple/banana/modules/InterfaceRegistrar.java",
    ]
  }
}
